--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.prime::before{
+.prime::before {
   content: "";
   position: absolute;
   left: 0;
@@ -18,61 +18,57 @@ body {
 .prime {
   position: relative;
   min-height: 50vh;
-  background: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,1));
+  background: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
 }
 
-.prime main{
+.prime main {
   color: rgb(255, 255, 255);
 }
 
-.mynavbar{
-    background-color: rgb(197, 197, 197) !important;
+.mynavbar {
+  background-color: rgb(197, 197, 197) !important;
 }
 
-.mynavbar .navbar-brand{
-    font-size: 1.6rem;
-    font-weight: bold;
-    color: white;
-}
-
-.mynavbar .menu-navbar{
-  font-size: 1.2rem;
+.mynavbar .navbar-brand {
+  font-size: 1.6rem;
   font-weight: bold;
+  color: #222;
+}
+
+.mynavbar .menu-navbar {
+  font-size: 1.2rem;
   text-transform: uppercase;
 }
 
-.mynavbar .menu-navbar a{
+.mynavbar .menu-navbar a {
   padding-left: 10px;
   padding-right: 10px;
   text-decoration: none;
   color: #222;
 }
 
-.mynavbar .menu-navbar a:hover{
+.mynavbar .menu-navbar a:hover {
   color: white;
+  background-color: #000000;
+  border-radius: 5px;
 }
 
 .card-trip {
-    position: relative;
-    cursor: pointer;
-  }
+  position: relative;
+  cursor: pointer;
+}
 
-.card-trip:hover{
-  outline: .1rem solid #222;
+.card-trip:hover {
+  outline: 0.1rem solid #222;
   outline-offset: 0;
   transform: scale(1.1);
 }
 
-
-@media(max-width: 1200px){
-  
+@media (max-width: 1200px) {
 }
-@media(max-width: 992px){
-
+@media (max-width: 992px) {
 }
-@media(max-width: 768px){
-
+@media (max-width: 768px) {
 }
-@media(max-width: 576px){
-
+@media (max-width: 576px) {
 }
