--- a/style.css
+++ b/style.css
@@ -26,28 +26,28 @@ body {
 }
 
 .mynavbar {
-  background-color: rgb(197, 197, 197) !important;
+  background-color: #222 !important;
 }
 
 .mynavbar .navbar-brand {
   font-size: 1.6rem;
   font-weight: bold;
-  color: #222;
+  color: #c6c6c6;
 }
 
-.mynavbar .menu-navbar {
+.mynavbar .navbar-collapse {
   font-size: 1.2rem;
   text-transform: uppercase;
 }
 
-.mynavbar .menu-navbar a {
+.mynavbar .navbar-collapse a {
   padding-left: 10px;
   padding-right: 10px;
   text-decoration: none;
-  color: #222;
+  color: #c7c7c7;
 }
 
-.mynavbar .menu-navbar a:hover {
+.mynavbar .navbar-collapse a:hover {
   color: white;
   background-color: #000000;
   border-radius: 5px;
@@ -61,7 +61,7 @@ body {
 .card-trip:hover {
   outline: 0.1rem solid #222;
   outline-offset: 0;
-  transform: scale(1.1);
+  transform: scale(1.02);
 }
 
 @media (max-width: 1200px) {
@@ -69,6 +69,15 @@ body {
 @media (max-width: 992px) {
 }
 @media (max-width: 768px) {
+  .mynavbar .navbar-brand {
+    font-size: 1.2rem;
+  }
+  .card-trip {
+    width: 155px;
+  }
+  .card-trip p {
+    font-size: 0.9rem;
+  }
 }
 @media (max-width: 576px) {
 }
