--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ body {
   .info .imgvimi {
     width: 100%;
   }
+  .card-trip:hover {
+    outline: 0;
+    outline-offset: 0;
+  }
 }
 
 /* Phone */
