--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-:root {
-  --color-1: #222;
-  --color-2: #ececec;
-}
 body {
   font-size: 1.2rem;
   font-family: "Montserrat", sans-serif;
@@ -26,17 +22,17 @@ body {
 }
 
 .prime main {
-  color: var(--color-2);
+  color: rgb(255, 255, 255);
 }
 
 .mynavbar {
-  background-color: var(--color-1) !important;
+  background-color: #222 !important;
 }
 
 .mynavbar .navbar-brand {
   font-size: 1.6rem;
-  font-weight: bolder;
-  color: var(--color-2);
+  font-weight: bold;
+  color: #c6c6c6;
 }
 
 .mynavbar .navbar-collapse {
@@ -48,19 +44,13 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   text-decoration: none;
-  color: var(--color-2);
-  font-weight: bold;
+  color: #c7c7c7;
 }
 
 .mynavbar .navbar-collapse a:hover {
-  color: var(--color-2);
-  background-color: var(--color-1);
+  color: white;
+  background-color: #000000;
   border-radius: 5px;
-}
-
-.info {
-  background-color: var(--color-1) !important;
-  color: var(--color-2);
 }
 
 .card-trip {
@@ -69,24 +59,15 @@ body {
 }
 
 .card-trip:hover {
-  outline: 0.1rem solid var(--color-1);
+  outline: 0.1rem solid #222;
   outline-offset: 0;
   transform: scale(1.02);
 }
 
-.footer {
-  background-color: var(--color-1) !important;
-  color: var(--color-2);
-}
-
 @media (max-width: 1200px) {
 }
-
-/* Laptop */
 @media (max-width: 992px) {
 }
-
-/* Tablet */
 @media (max-width: 768px) {
   .mynavbar .navbar-brand {
     font-size: 1.2rem;
@@ -97,15 +78,12 @@ body {
   .card-trip p {
     font-size: 0.9rem;
   }
-  .info .imgvimi {
-    width: 100%;
-  }
-  .card-trip:hover {
-    outline: 0;
-    outline-offset: 0;
-  }
 }
-
-/* Phone */
 @media (max-width: 576px) {
+  .card-trip {
+    width: 145px;
+  }
+  .card-trip p {
+    font-size: 0.8rem;
+  }
 }
