--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --color-1: #222;
+  --color-2: #eaeaea;
+}
+
 body {
   font-size: 1.2rem;
   font-family: "Montserrat", sans-serif;
@@ -26,13 +31,13 @@ body {
 }
 
 .mynavbar {
-  background-color: #222 !important;
+  background-color: var(--color-1) !important;
 }
 
 .mynavbar .navbar-brand {
   font-size: 1.6rem;
   font-weight: bold;
-  color: #c6c6c6;
+  color: var(--color-2);
 }
 
 .mynavbar .navbar-collapse {
@@ -44,13 +49,27 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   text-decoration: none;
-  color: #c7c7c7;
+  color: var(--color-2);
 }
 
 .mynavbar .navbar-collapse a:hover {
-  color: white;
+  color: var(--color-2);
+  font-weight: bold;
   background-color: #000000;
   border-radius: 5px;
+}
+
+.d-block {
+  border-radius: 10px;
+}
+
+.info {
+  background-color: var(--color-1) !important;
+  color: var(--color-2);
+}
+
+.info .imgvimi {
+  border-radius: 10px;
 }
 
 .card-trip {
@@ -64,6 +83,11 @@ body {
   transform: scale(1.02);
 }
 
+.footer {
+  background-color: var(--color-1);
+  color: var(--color-2);
+}
+
 @media (max-width: 1200px) {
 }
 @media (max-width: 992px) {
@@ -71,6 +95,9 @@ body {
 @media (max-width: 768px) {
   .mynavbar .navbar-brand {
     font-size: 1.2rem;
+  }
+  .info .imgvimi {
+    width: 100%;
   }
   .card-trip {
     width: 155px;
@@ -81,7 +108,7 @@ body {
 }
 @media (max-width: 576px) {
   .card-trip {
-    width: 145px;
+    width: 130px;
   }
   .card-trip p {
     font-size: 0.8rem;
